bluejay-validator/tests/snapshots/executable_integration_test__error@variable_uniqueness.graphql.snap
---
source: bluejay-validator/tests/executable_integration_test.rs
expression: formatted_errors
input_file: bluejay-validator/tests/test_data/executable/error/variable_uniqueness.graphql
---
Error: Multiple variable definitions named $atOtherHomes
   ╭─[<unknown>:1:1]
   │
 1 │ query houseTrainedQuery($atOtherHomes: Boolean, $atOtherHomes: Boolean) {
   │                         ──────┬──────           ──────┬──────  
   │                               ╰──────────────────────────────── Variable definition with name $atOtherHomes
   │                                                       │        
   │                                                       ╰──────── Variable definition with name $atOtherHomes
───╯

